[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "locust==2.15.1",
    "pytest>=8.3.4",
    "pytest-html==3.2.0",
    "pytest-mock==3.11.1",
    "pytest-xdist==3.3.1",
    "python-dateutil==2.8.2",
    "requests==2.31.0",
    "selenium>=4.28.1",
    "webdriver-manager==4.0.0",
]
